Work to round out most of chapter 3. PySpark and elasticsearch integration.